change default text color to white

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 body {
     /* margin:0;  */
-   background: linear-gradient(rgb(8, 134, 207), rgb(3, 43, 66));
+   background: linear-gradient(#12263e, rgb(52, 113, 148));
+   color: white;
 }
 
 form {
